2003-07-28  Piers Haken	<piersh@friskit.com>

	* DefaultContext.cs: better function param matching

2003-07-27  Piers Haken	<piersh@friskit.com>

	* Expression.cs:
	* DefaultContext.cs:
		catch FormatExceptions while parsing numbers

2003-07-27  Piers Haken	<piersh@friskit.com>

	* Expression.cs:
		fix case sorting order
		allow EvaluateNumber to take XPathResultType.Any

2003-07-27  Piers Haken	<piersh@friskit.com>

	* Expression.cs:
	* Tokenizer.cs:
		don't pass null to XmlQualifiedName constructor

2003-07-27  Piers Haken	<piersh@friskit.com>

	* DefaultContext.cs: allow 'concat' to take arbitrary-typed arguments (spec?)

2003-07-27  Piers Haken	<piersh@friskit.com>

	* Expression.cs: allow EvaluateNodeSet to take XPathResultType.Any

2003-07-26  Piers Haken	<piersh@friskit.com>

	* Expression.cs: fix function evaluation with ambigous argument types
	* XPathNavigator.cs: fix silly null reference bug

2003-07-26  Piers Haken	<piersh@friskit.com>

	* Iterator.cs:
	* DefaultContext.cs:
		ArrayListIterator->EnumeratorIterator
	* Expression.cs: add sorting support

2003-07-26  Piers Haken	<piersh@friskit.com>

	* Tokenizer.cs:
	* Parser.jay:
		move QName parsing into tokenizer
	* Expression.cs:
		fix evaluating XPathResultType.Any
		fix ExprDiv.ToString()
		fix NodeTypeTest.ToString() (for namespace axis)

2003-07-25  Piers Haken	<piersh@friskit.com>

	* Expression.cs: return clone of $var evaluation

2003-07-26  Piers Haken	<piersh@friskit.com>

	* Iterator.cs: add setter for NamespaceManager
	* XPathNavigator.cs: propagate NamespaceManager from context on Evaluate
	* Expression.cs: fix func/var exception strings

2003-07-25  Piers Haken	<piersh@friskit.com>

	* Expression.cs: implement ExprFilter.Evaluate

2003-07-25  Piers Haken	<piersh@friskit.com>

	* Expression.cs: implement ExprVariable.Evaluate

2003-07-24  Ben Maurer <bmaurer@users.sourceforge.net>
	
	* DefaultContext.cs: implement lang ()

2003-07-24  Piers Haken	<piersh@friskit.com>

	* Parser.jay: