@@ -1,5 +1,10 @@
 2003-07-28  Piers Haken	<piersh@friskit.com>
 
+	* DefaultContext.cs: count() should return a double
+	* Expression.cs: better support for handling non-double numbers
+
+2003-07-28  Piers Haken	<piersh@friskit.com>
+
 	* DefaultContext.cs: better function param matching
 
 2003-07-27  Piers Haken	<piersh@friskit.com>
